[package]
name = "main"
version = "0.1.0"
authors = ["anonymousGiga <cryptonymGong@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hello_macro = {path = "../hello_macro"}
hello_macro_derive = {path = "../hello_macro/hello_macro_derive"}

